...
    }()
    
    private let saveButton: UIButton = {
        let button = UIButton(type: .system)
        button.layer.cornerRadius = 5
        button.backgroundColor = UIColor.appThemeColor
        button.setTitle("Save", for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitleColor(.white, for: .normal)
        return button
    }()
    
    private var saveButtonBottomConstraint: NSLayoutConstraint?
...
        saveButton.addTarget(self, action: #selector(addAction), for: .touchUpInside)
        
    }
    
    @objc func addAction(_ sender: Any) {
        if messageTextView.text.isEmpty {
            self.showAlert(withTitle: "Error", withMessage: "Please enter text!")
        } else {
            viewModel.save(message: messageTextView.text)
            self.navigationController?.popViewController(animated: true)
        }
    }
    
...
